--- a/src/app/index.css
+++ b/src/app/index.css
@@ -15,3 +15,13 @@ body {
   border-width: 5px;
   border-color: chocolate;
 }
+
+.img-preview {
+  width: 90%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
